syntax = "proto3";
package ampel;

import "google/protobuf/empty.proto";

enum color {
  INV=0;
  GREEN=1;
  YELLOW=2;
  RED=3;
}


message col {
  color color=1;
}

message ack {
  bool success=1;
}

service ampel2 {
  rpc setColor(col) returns (ack);
  rpc getColor(google.protobuf.Empty) returns (col);
}